fix: correct font-family

--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -1,6 +1,6 @@
 .odd {
     background-color: #fcb9c4;
-    font-family: Verdana, DejaVu Sans, sans-serif;
+    font-family: Verdana, 'DejaVu Sans', sans-serif;
 }
 
 #second {
