--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,15 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  /* flex-flow: row wrap; */
+  /* justify-content: space-evenly; */
+  /* justify-content: flex-start; */
+  justify-content: space-between;
+  /* justify-content: end; */
+  align-items: center;
+  padding: 8px;
+
 }
 
 .logo {
@@ -9,11 +18,30 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  /* margin: auto; */
+  /* align-items: center; */
+  /* flex-grow: 0; */
+  /* flex: 0; */
+
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  /* margin-left: auto; */
+  /* margin-right: auto; */
+  /* margin: 0px 8px; */
+  /* flex: auto; */
+  display: flex ;
+  /* justify-content: space-evenly; */
+  /* justify-content: flex-end; */
+  /* justify-content: flex-start; */
+  /* justify-content: space-between; */
+  gap: 15px;
+  margin: 0;
+  padding: 0;
+  
+  
 }
 
 a {
@@ -22,4 +50,9 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+  /* flex: 1 1 auto; */
+  /* gap: 5px; */
+  /* align-self: flex-start; */
+  /* margin-right: auto; */
+
 }
