--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,15 +1,56 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  /* display: flex; */
+  text-align: center;
 }
 
 img {
   width: 100px;
   height: 100px;
+  /* display: flex; */
+  /* align-items: flex-start; */
+  /* align-self: flex-start; */
+  /* align-self: center; */
+  /* text-align: center; */
 }
 
 .title {
   font-size: 36px;
   font-weight: 900;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 32px;
+}
+
+.items {
+  display: flex;
+  justify-content: center;
+  gap: 52px;
+  /* flex-wrap: wrap; */
+  /* align-items: center; */
+  /* flex-basis: 200px; */
+  /* flex-direction: row; */
+}
+
+/* .items .media {
+  display: flex;
+  flex-direction: column;
+} */
+
+.specs {
+  text-align: center;
+  max-width: 200px;
+}
+
+.text  {
+  /* align-content: flex-end; */
+  /* align-items: flex-end; */
+  flex-wrap: wrap;
+  /* font-size: 1px; */
+  /* flex-shrink: 1; */
+  text-align: center;
+  /* justify-content: center; */
+  /* align-items: center; */
 }
 
 /* do not edit this footer */
