--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,9 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+
+  display: flex;
+  flex-direction: column;
 }
 
 img {
@@ -16,6 +19,8 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+
+  padding: 8px 16px;
 }
 
 input {
@@ -23,4 +28,45 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+  
+  margin-top: 16px;
+  margin-bottom: 16px;
+}
+
+.header,
+.footer {
+  display: flex;
+  padding: 8px;
+  justify-content: space-between;
+}
+
+.footer {
+  background-color: #eee;
+  /* margin-top: auto; */
+}
+
+ul {
+  display: flex;
+  /* justify-content: space-between; */
+  /* flex: 1; */
+  list-style: none;
+  gap: 16px;
+  padding: 0;
+  margin: 0;
+}
+
+a {
+  color: #678;
+  text-decoration: none;
+}
+
+.content {
+  /* text-align: center; */
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  align-items: center;
+  margin: auto;
+  /* flex: 1; */
+  /* gap: 16px; */
 }
