--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -5,6 +5,9 @@
 
 .container {
   text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  gap: 4px;
 }
 
 .container div {
@@ -17,15 +20,43 @@
 
 .header {
   background-color: #393f4d;
+  grid-column: span 2;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
 }
 
+.menu {
+  align-self: center;
+}
 .menu ul,
 .menu li {
   font-size: 16px;
 }
 
+.menu ul,
+.nav ul {
+  list-style: none;
+  display: grid;
+}
+.menu ul {
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.logo {
+  justify-self: start;
+}
+
 .sidebar {
   background-color: #C50208;
+  gap: 50px;
+  display: grid;
+  grid-row: 2 / 4;
+}
+
+.side-content,
+.photo {
+  display: grid;
+  align-items: center;
 }
 
 .sidebar .photo {
@@ -35,7 +66,6 @@
   font-weight: normal;
   border-radius: 10px;
 }
-
 
 .sidebar .side-content {
   background-color: white;
@@ -48,6 +78,14 @@
   background-color: #C50208;
 }
 
+.nav,
+.article {
+  grid-column: 2 / 3;
+}
+
+.nav ul {
+  grid-template-columns: repeat(3, 1fr);
+}
 .nav ul li {
   font-size: 16px;
   text-transform: uppercase;
@@ -55,6 +93,9 @@
 
 .article {
   background-color: #bccbde;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 15px;
 }
 
 .article p {
@@ -68,6 +109,7 @@
   background-color: #FFFFFF;
   color: black;
   text-align: center;
+  min-height: 200px;
 }
 
 .card p {
@@ -79,10 +121,13 @@
 .card .title {
   font-size: 18px;
   text-align: center;
+  line-height: 1.5rem;
+  margin-bottom: 2%;
 }
 
 .footer {
   background-color: #393f4d;
+  grid-column: 1 / 3;
 }
 
 .footer p {
