--- a/animation/03-dropdown-menu/style.css
+++ b/animation/03-dropdown-menu/style.css
@@ -17,7 +17,7 @@
   padding: 0;
   margin: 0;
   background-color: rgb(99, 97, 97);
-
+  /* transform-origin: center; */
   display: none;
 }
 
@@ -27,6 +27,18 @@ ul.dropdown-menu li:hover {
 
 .visible {
   display: block;
+  animation: bounce 750ms ease-out;
+  transform-origin: top;
 }
 
-
+@keyframes bounce {
+  from {
+    transform: scaleY(0);
+  }
+  75% {
+    transform: scaleY(1.2);
+  }
+  to {
+    transform: scaleY(1);
+  }
+}
